fixed loading button not centered in CardList

--- a/src/features/exercises/components/CardsList/CardsList.module.css
+++ b/src/features/exercises/components/CardsList/CardsList.module.css
@@ -6,9 +6,11 @@
 	/* align-items: center; */
 	gap: 15px;
 }
-/* max-height: calc(
-		100vh - 80px - 96px - 41.38px - 96px - 40px - 87.33px - 34px
-	); */
+
+.loading {
+	display: flex;
+	justify-content: center;
+}
 .mobileView {
 	background-color: transparent;
 	padding: 0;
